--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -5,11 +5,11 @@
 	},
 	"project": {
 		"name": "TallyBall",
-		"description": "",
+		"description": "We like to launch it all. Welcome to Tally Ball.",
 		"creationDate": "1/31/2024, 11:39:02 AM",
 		"platform": "V5",
 		"language": "python",
-		"slot": 1,
+		"slot": 2,
 		"sdkVersion": "V5_1_0_1_15",
 		"python": {
 			"main": "src/main.py"
