--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -4,12 +4,12 @@
 		"json": 2
 	},
 	"project": {
-		"name": "TallyBall",
+		"name": "OFFENSETallyBall",
 		"description": "We like to launch it all. Welcome to Tally Ball.",
 		"creationDate": "1/31/2024, 11:39:02 AM",
 		"platform": "V5",
 		"language": "python",
-		"slot": 2,
+		"slot": 1,
 		"sdkVersion": "V5_1_0_1_15",
 		"python": {
 			"main": "src/main.py"
